--- a/index.html
+++ b/index.html
@@ -17,9 +17,21 @@
 
             <div class="header__content">
 
+                <div class="header__logo_tablet">
+
+                    <img src="img/header/header-logo.png" alt="">
+
+                </div>
+
                 <nav class="header__nav">
 
                     <ul class="header__list">
+
+                        <div class="header__burger-close">
+
+                            <span class="header__burger-close-icon"></span>
+
+                        </div>
 
                         <li class="header__list-item">
 
@@ -59,6 +71,12 @@
 
                 </nav>
 
+                <div class="header__burger">
+
+                    <span class="header__burger-icon"></span>
+
+                </div>
+
             </div>
 
         </div>
@@ -85,7 +103,7 @@
 
         </div>
 
-        <div class="why" id="why">
+        <div class="why none" id="why">
 
             <h2 class="title why__title">Почему работать с нами - выгодно и удобно</h2>
 
@@ -213,7 +231,7 @@
 
         </div>
 
-        <div class="application">
+        <div class="application application_first">
 
             <div class="container">
 
@@ -337,7 +355,9 @@
 
                 <div class="cases__item cases__item6">
 
-                    <p class="cases__item-title6">Самир Азарян</p>
+                    <!-- <p class="cases__item-title6">Самир Азарян</p> -->
+
+                    <img src="img/cases/case-item-icon6.png" alt="" class="cases__item-logo">
 
                     <p class="cases__item-desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi fugiat odit mollitia!</p>
 
@@ -397,9 +417,123 @@
 
                 <div class="clients__content">
 
-                    <div class="clients__img">
+                    <div class="clients__row">
 
-                        <img src="" alt="">
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo1.png" alt="">
+
+                        </div>
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo2.png" alt="">
+
+                        </div>
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo3.png" alt="">
+
+                        </div>
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo1.png" alt="">
+
+                        </div>
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo3.png" alt="">
+
+                        </div>
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo2.png" alt="">
+
+                        </div>
+
+                    </div>
+
+                    <div class="clients__row">
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo2.png" alt="">
+
+                        </div>
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo3.png" alt="">
+
+                        </div>
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo1.png" alt="">
+
+                        </div>
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo2.png" alt="">
+
+                        </div>
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo1.png" alt="">
+
+                        </div>
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo2.png" alt="">
+
+                        </div>
+
+                    </div>
+
+                    <div class="clients__row">
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo3.png" alt="">
+
+                        </div>
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo2.png" alt="">
+
+                        </div>
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo1.png" alt="">
+
+                        </div>
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo1.png" alt="">
+
+                        </div>
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo3.png" alt="">
+
+                        </div>
+
+                        <div class="clients__img">
+
+                            <img src="img/clients-img/clients-logo1.png" alt="">
+
+                        </div>
 
                     </div>
 
@@ -623,7 +757,7 @@
 
                             <img class="question__item-icon" src="img/questions/questions-arrow.png" alt="">
 
-                            <p>Вопрос первый?</p>
+                            <p><span>Вопрос первый?</span></p>
 
                         </div>
 
@@ -637,7 +771,7 @@
 
                             <img class="question__item-icon" src="img/questions/questions-arrow.png" alt="">
 
-                            <p>Что такое Lorem Ipsum?</p>
+                            <p><span>Что такое Lorem Ipsum?</span></p>
 
                         </div>
 
@@ -651,7 +785,7 @@
 
                             <img class="question__item-icon" src="img/questions/questions-arrow.png" alt="">
 
-                            <p>Что такое вопрос третий Lorem Ipsum?</p>
+                            <p><span>Что такое вопрос третий Lorem Ipsum?</span></p>
 
                         </div>
 
@@ -665,7 +799,7 @@
 
                             <img class="question__item-icon" src="img/questions/questions-arrow.png" alt="">
 
-                            <p>Вопрос первый?</p>
+                            <p><span>Вопрос первый?</span></p>
 
                         </div>
 
@@ -679,7 +813,7 @@
 
                             <img class="question__item-icon" src="img/questions/questions-arrow.png" alt="">
 
-                            <p>Что такое Lorem Ipsum?</p>
+                            <p><span>Что такое Lorem Ipsum?</span></p>
 
                         </div>
 
@@ -693,7 +827,7 @@
 
                             <img class="question__item-icon" src="img/questions/questions-arrow.png" alt="">
 
-                            <p>Что такое вопрос третий Lorem Ipsum?</p>
+                            <p><span>Что такое вопрос третий Lorem Ipsum?</span></p>
 
                         </div>
 
@@ -707,7 +841,7 @@
 
                             <img class="question__item-icon" src="img/questions/questions-arrow.png" alt="">
 
-                            <p>Что такое Lorem Ipsum?</p>
+                            <p><span>Что такое Lorem Ipsum?</span></p>
 
                         </div>
 
@@ -721,7 +855,7 @@
 
                             <img class="question__item-icon" src="img/questions/questions-arrow.png" alt="">
 
-                            <p>Что такое вопрос третий Lorem Ipsum?</p>
+                            <p><span>Что такое вопрос третий Lorem Ipsum?</span></p>
 
                         </div>
 
