--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                         <li class="header__list-item header__logo">
 
-                            <a href="#">
+                            <a href="index.html">
 
                                 <img src="img/header/header-logo.png" alt="">
 
@@ -1008,6 +1008,102 @@
         </div>
 
     </footer>
+
+    <div class="modal__wrap_form">
+
+        <div class="modal__form-wrap">
+
+            <div class="modal__form-close">
+
+                <span></span>
+
+            </div>
+
+            <h2 class="title form__title">Оставьте заявку</h2>
+
+            <form action="" class="modal__form">
+
+                <div class="modal__cols-wrap">
+
+                    <div class="modal__form-col">
+
+                        <div class="form__input-name">
+
+                            <input type="text" placeholder="Ваше имя">
+
+                            <span>*</span>
+
+                        </div>
+
+                        <div class="form__input-tel">
+
+                            <input type="tel" placeholder="Контактный телефон">
+
+                            <span>*</span>
+
+                        </div>
+
+                    </div>
+
+                    <div class="modal__form-col">
+
+                        <input type="text" placeholder="Город">
+
+                        <input type="text" placeholder="Сфера бизнеса">
+
+                    </div>
+
+                    <div class="modal__form-col">
+
+                        <input type="text" placeholder="Сайт">
+
+                        <button type="button" class="btn form__btn">Заявка</button>
+
+                    </div>
+
+                </div>
+
+                <div class="application__checkbox">
+
+                    <label>
+
+                        <input type="checkbox" name="privacy-policy" class="real-checkbox">
+
+                        <span class="custom-checkbox"></span>
+
+                        <span class="checkbox-text">Согласен на обработку персональных данных</span>
+
+                    </label>
+
+                </div>
+
+            </form>
+
+        </div>
+
+    </div>
+
+    <div class="modal__wrap_thanks">
+
+        <div class="modal__thanks-wrap">
+
+            <div class="modal__thanks-close">
+
+                <span></span>
+
+            </div>
+
+            <div class="modal__thanks-content">
+
+                <p>Спасибо!</p>
+
+                <p>Ваша заявка принята</p>
+
+            </div>
+
+        </div>
+
+    </div>
 
     <script src="libs/jQuery/jquery-3.6.0.min.js"></script>
     <script src="libs/owl-carousel/owl.carousel.min.js"></script>
