--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         </div>
 
-        <div class="why none" id="why">
+        <div class="why" id="why">
 
             <h2 class="title why__title">Почему работать с нами - выгодно и удобно</h2>
 
@@ -249,9 +249,9 @@
 
                                 <div class="application__input-name">
 
-                                    <input type="text" placeholder="Ваше имя">
+                                    <input type="text" id="input-name1" required>
 
-                                    <span>*</span>
+                                    <label for="input-name1">Ваше имя<span>*</span></label>
 
                                 </div>
 
@@ -263,9 +263,9 @@
 
                                 <div class="application__input-tel">
 
-                                    <input type="tel" placeholder="Контактный телефон">
+                                    <input type="tel" id="input-tel1" required>
 
-                                    <span>*</span>
+                                    <label for="input-tel1">Контактный телефон<span>*</span></label>
 
                                 </div>
 
@@ -561,9 +561,9 @@
 
                                 <div class="application__input-name">
 
-                                    <input type="text" placeholder="Ваше имя">
+                                    <input type="text" id="input-name2" required>
 
-                                    <span>*</span>
+                                    <label for="input-name2">Ваше имя<span>*</span></label>
 
                                 </div>
 
@@ -575,9 +575,9 @@
 
                                 <div class="application__input-tel">
 
-                                    <input type="tel" placeholder="Контактный телефон">
+                                    <input type="tel" id="input-tel2" required>
 
-                                    <span>*</span>
+                                    <label for="input-tel2">Контактный телефон<span>*</span></label>
 
                                 </div>
 
@@ -887,9 +887,9 @@
 
                                 <div class="application__input-name">
 
-                                    <input type="text" placeholder="Ваше имя">
+                                    <input type="text" id="input-name3" required>
 
-                                    <span>*</span>
+                                    <label for="input-name3">Ваше имя<span>*</span></label>
 
                                 </div>
 
@@ -901,9 +901,9 @@
 
                                 <div class="application__input-tel">
 
-                                    <input type="tel" placeholder="Контактный телефон">
+                                    <input type="tel" id="input-tel3" required>
 
-                                    <span>*</span>
+                                    <label for="input-tel3">Контактный телефон<span>*</span></label>
 
                                 </div>
 
@@ -1029,17 +1029,17 @@
 
                         <div class="form__input-name">
 
-                            <input type="text" placeholder="Ваше имя">
+                            <input type="text" id="form-input-name" required>
 
-                            <span>*</span>
+                            <label for="form-input-name">Ваше имя<span>*</span></label>
 
                         </div>
 
                         <div class="form__input-tel">
 
-                            <input type="tel" placeholder="Контактный телефон">
+                            <input type="tel" id="form-input-tel" required>
 
-                            <span>*</span>
+                            <label for="form-input-tel">Контактный телефон<span>*</span></label>
 
                         </div>
 
