--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         </div>
 
-        <div class="why" id="why">
+        <div class="why none" id="why">
 
             <h2 class="title why__title">Почему работать с нами - выгодно и удобно</h2>
 
