--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         </div>
 
-        <div class="why none" id="why">
+        <div class="why" id="why">
 
             <h2 class="title why__title">Почему работать с нами - выгодно и удобно</h2>
 
@@ -117,7 +117,7 @@
 
                         <p class="why__item-text why__item-text1">Только <br> эффективные <br> рекламные <br> форматы <br> и инструменты</p>
 
-                        <img class="why__item-img" src="img/why/why-item1.png" alt="">
+                        <img class="why__item-img why__item-img1" src="img/why/why-item1.png" alt="">
 
                     </div>
 
@@ -127,7 +127,7 @@
 
                         <p class="why__item-text why__item-text2">Ориентированность <br> на специфику <br> вашей ниши</p>
 
-                        <img class="why__item-img" src="img/why/why-item2.png" alt="">
+                        <img class="why__item-img why__item-img2" src="img/why/why-item2.png" alt="">
 
                     </div>
 
@@ -137,7 +137,7 @@
 
                         <p class="why__item-text why__item-text3">Прозрачный <br> и понятный <br> алгоритм работ</p>
 
-                        <img class="why__item-img" src="img/why/why-item3.png" alt="">
+                        <img class="why__item-img why__item-img3" src="img/why/why-item3.png" alt="">
 
                     </div>
 
@@ -147,7 +147,7 @@
 
                         <p class="why__item-text why__item-text4">Для каждого <br> инструмента – свой <br> квалифицированный <br> специалист</p>
 
-                        <img class="why__item-img" src="img/why/why-item4.png" alt="">
+                        <img class="why__item-img why__item-img4" src="img/why/why-item4.png" alt="">
 
                     </div>
 
@@ -157,7 +157,7 @@
 
                         <p class="why__item-text why__item-text5">Прогнозируемые <br> результаты</p>
 
-                        <img class="why__item-img" src="img/why/why-item5.png" alt="">
+                        <img class="why__item-img why__item-img5" src="img/why/why-item5.png" alt="">
 
                     </div>
 
@@ -167,7 +167,7 @@
 
                         <p class="why__item-text why__item-text6">Регулярная <br> отчетность</p>
 
-                        <img class="why__item-img" src="img/why/why-item6.png" alt="">
+                        <img class="why__item-img why__item-img6" src="img/why/why-item6.png" alt="">
 
                     </div>
 
@@ -177,7 +177,7 @@
 
                         <p class="why__item-text why__item-text7">Проверенная <br> маркетинговая система, <br> подстраивающаяся <br> под ваш биз</p>
 
-                        <img class="why__item-img" src="img/why/why-item7.png" alt="">
+                        <img class="why__item-img why__item-img7" src="img/why/why-item7.png" alt="">
 
                     </div>
 
@@ -187,7 +187,7 @@
 
                         <p class="why__item-text why__item-text8">Стабильный <br> поток лидов</p>
 
-                        <img class="why__item-img" src="img/why/why-item8.png" alt="">
+                        <img class="why__item-img why__item-img8" src="img/why/why-item8.png" alt="">
 
                     </div>
 
@@ -197,7 +197,7 @@
 
                         <p class="why__item-text why__item-text9">Понятная и логичная <br> воронка продаж</p>
 
-                        <img class="why__item-img" src="img/why/why-item9.png" alt="">
+                        <img class="why__item-img why__item-img9" src="img/why/why-item9.png" alt="">
 
                     </div>
 
@@ -207,7 +207,7 @@
 
                         <p class="why__item-text why__item-text10">Один подрядчик - <br> один договор</p>
 
-                        <img class="why__item-img" src="img/why/why-item10.png" alt="">
+                        <img class="why__item-img why__item-img10" src="img/why/why-item10.png" alt="">
 
                     </div>
 
