--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
                             <label>
 
-                                <input type="checkbox" name="privacy-policy" class="real-checkbox">
+                                <input type="checkbox" name="privacy-policy" class="real-checkbox" checked>
 
                                 <span class="custom-checkbox"></span>
 
@@ -599,7 +599,7 @@
 
                             <label>
 
-                                <input type="checkbox" name="privacy-policy" class="real-checkbox">
+                                <input type="checkbox" name="privacy-policy" class="real-checkbox" checked>
 
                                 <span class="custom-checkbox"></span>
 
@@ -925,7 +925,7 @@
 
                             <label>
 
-                                <input type="checkbox" name="privacy-policy" class="real-checkbox">
+                                <input type="checkbox" name="privacy-policy" class="real-checkbox" checked>
 
                                 <span class="custom-checkbox"></span>
 
@@ -1067,7 +1067,7 @@
 
                     <label>
 
-                        <input type="checkbox" name="privacy-policy" class="real-checkbox">
+                        <input type="checkbox" name="privacy-policy" class="real-checkbox" checked>
 
                         <span class="custom-checkbox"></span>
 
